--- a/v1/v1.html
+++ b/v1/v1.html
@@ -18,7 +18,6 @@
 
 <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=latin-ext" rel="stylesheet">
 
-
 </head>
 <body>
 
@@ -72,7 +71,7 @@
 
 V rámci projekčnej činnosti zastrešujeme všetky profesie potrebné pre ucelené spracovanie projektovej dokumentácie.
 
-<stron>Časti projektovej dokumentácie:</strong>
+<strong>Časti projektovej dokumentácie:</strong>
 <ul>
 <li>architektúra a stavebná časť</li>
 <li>časť statika</li>
@@ -144,77 +143,6 @@ Cieľom je zabezpečiť kvalitné prevedenie stavebných prác pre investora pri
 KONTAKT
 ---------------------------------
 -->
-
-<!--
----------------------------------
-	CONTACT 	 
----------------------------------
--->
-<section class="content text">
-<br><br><!-- !!! br -->
-	<div class="flex-row">
-	  <div class="col">
-			<h2>Kontakt</h2>
-			<p>
-			<br>PATRIUM
-			<br>Narcisová 6, 040 11 Košice
-			<br>
-			<br>Miroslav Jašek - <a href="tel:+421907971276" >0907 971 276</a>
-			<br>Erik Jašek - <a href="tel:+421917568240" >0917 568 240</a>
-			<br><a href="mailto:caliber.sro@gmail.com" target="_top">caliber.sro@gmail.com</a>
-			<br>www.caliberke.sk
-			<br>
-			<br>Bankové spojenie:
-			<br>ČSOB SK28 7500 0000 0040 2165 9312
-			<br>SBERBANK SK19 3100 0000 0043 5035 7008
-			<br>
-			<br>IČO: 36773964
-			<br>DIČ: 2022374068
-			<br>IČ DPH: SK2022374068
-			<div id="sent"></div>
-			<br>
-			<br>zápis v Obchodnom registri Okresného súdu Košice I., odd. Sro, vl. č. 19786/V
-            <br>
-       </div>
-
-	<div class="col">
-
-
-<div id="frmContact">
-<div id="frm_fields">
-
-<label style="padding-top:20px;">Meno</label>
-<span id="userName-info" class="info"></span><br/>
-<input type="text" name="userName" id="userName" class="demoInputBox">
-
-<div>
-<label>Email</label>
-<span id="userEmail-info" class="info"></span><br/>
-<input type="text" name="userEmail" id="userEmail" class="demoInputBox">
-</div>
-
-<select placeholder="Subject line" name="subject" id="subject" required>
-        <option disabled hidden selected>Vyberte možnosť</option>
-        <option>Zateplenie bytového domu</option>
-        <option>Rekonštrukcia</option>
-        <option>Výstavba</option>
-        <option>Iné</option>
-</select>
-
-<div>
-<label>Správa</label> 
-<span id="content-info" class="info"></span><br/>
-<textarea name="content" id="content" class="demoInputBox" cols="60" rows="6"></textarea>
-</div>
-
-</div>
-
-<div>
-<button name="submit" id="btnOdoslat" class="btnAction" onClick="sendContact();">Odoslať</button>
-</div>
-<div id="mail-status"></div>
-<br>
-</div>
 
 
 
