Added text formating, map removed

--- a/v1/v1.html
+++ b/v1/v1.html
@@ -6,7 +6,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <script type="text/javascript" src="components/jquery-3.1.1.min.js"></script>
@@ -21,18 +20,22 @@
 </head>
 <body>
 
-<nav>asdf</nav>
+<nav></nav>
+
+<div id='line'></div>
 
 <header>
 <div class="logo"></div>
 </header>
+
+
 
 <section class="jarallax" id="parallax-A"> 
 </section>
 
 
 <section class="text">
-<div class="flex-row"> 
+<div class="flex-row center"> 
 <div class="col">
 <p>Naša spoločnosť vznikla v roku 2013 plynulým prechodom zo živnosti konateľa a jediného spoločníka, ktorá bola založená v roku 2002 a za 11 rokov pôsobenia na slovenskom trhu si našla stabilné miesto v rámci projekčnej a inžinierskej činnosti. Zaoberáme sa projekčnou činnosťou pozemných stavieb od novostavieb rodinných domov, administratívnych budov, polyfunkčných budov, obchodných centier, cez rekonštrukcie a komplexnú obnovu bytových domov, prístavby, nadstavby až po individuálne úpravy interiérov a bytov, firemných priestorov podľa požiadaviek investorov.</p>
 
@@ -54,14 +57,15 @@
 
 
 <section class="text">
+
 <div class="flex-row"> 
+
 <div class="col">
 
-<h2>PROJEKČNÁ A INŽINIERSKA ČINNOSŤ</h2>
+<h2 id="i1">Projekčná činnosť</h2>
 
-<h2>Projekčná činnosť</h2>
 
-<h3>Zameranie projektovej činnosti:</h3>
+<strong>Zameranie projektovej činnosti:</strong>
 <ul>
 <li>štúdie</li>
 <li>projekty pre územné konanie</li>
@@ -69,7 +73,7 @@
 <li>realizačná dokumentácia</li>
 </ul>
 
-V rámci projekčnej činnosti zastrešujeme všetky profesie potrebné pre ucelené spracovanie projektovej dokumentácie.
+V rámci projekčnej činnosti zastrešujeme všetky profesie potrebné pre ucelené spracovanie projektovej dokumentácie.<br>
 
 <strong>Časti projektovej dokumentácie:</strong>
 <ul>
@@ -84,14 +88,16 @@ V rámci projekčnej činnosti zastrešujeme všetky profesie potrebné pre ucel
 <li>a pod.</li>
 </ul>
 Našou prioritou je poskytnúť kvalitné služby v dohodnutom termíne a cene, k maximálnej spokojnosti zúčastnených strán.
-
 </div>
+
+
+
 <div class="col">
 
 
-<h2>Inžinierska činnosť</h2>
+<h2 id="i2">Inžinierska činnosť</h2>
 
-<h3>V rámci realizácie projektovej dokumentácie alebo aj samostatne zabezpečujeme aj kompletnú inžiniersku činnosť potrebnú na zabezpečenie povolení v jednotlivých stupňoch:</h3>
+<strong>V rámci realizácie projektovej dokumentácie alebo aj samostatne zabezpečujeme aj kompletnú inžiniersku činnosť potrebnú na zabezpečenie povolení v jednotlivých stupňoch:</strong>
 <ul>
 <li>územné konanie</li>
 <li>stavebné konanie</li>
@@ -105,9 +111,9 @@ alebo individuálne žiadosti:
 <li>dotácia na zateplenie rodinného domu</li>
 </ul>
 
-<h3>STAVEBNÝ DOZOR</h3>
+<h2 id="i3">Stavebný dozor</h2>
 
-<h2>Výkon činnosti stavebného dozoru vykonávame od roku 2013 v rámci realizácii stavebných prác pri:</h2>
+<strong>Výkon činnosti stavebného dozoru vykonávame od roku 2013 v rámci realizácii stavebných prác pri:</strong>
 <ul>
 <li>výstavbe rodinných domov</li>
 <li>komplexných obnov bytových domov</li>
@@ -128,38 +134,18 @@ Cieľom je zabezpečiť kvalitné prevedenie stavebných prác pre investora pri
 <div class="flex-row"> 
 <div class="col">
 
-<h3>KONTAKT</h3>
 
 </div>
 </div>
 </section>
+
+<div id='line'></div>
+
 
 <section class="jarallax" id="parallax-C"> 
 </section>
 
 
-<!--
----------------------------------
-KONTAKT
----------------------------------
--->
-
-
-
-
-<!--
----------------------------------
-	GOOGLE MAPA
----------------------------------
--->
-<section class="content">
-<div id="cd-google-map">
-				<div id="google-container"></div>
-				<div id="cd-zoom-in"></div>
-				<div id="cd-zoom-out"></div>
-				<address>CALIBER s.r.o.,  Narcisová 6, Košice</address> 
-</div>
-</section>
 
 
 
