--- a/v1/v1.html
+++ b/v1/v1.html
@@ -13,9 +13,9 @@
 
 <script type="text/javascript" src="js/script.js"></script>	
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-<link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=latin-ext" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=latin-ext" rel="stylesheet">
 
 </head>
 <body>
@@ -45,7 +45,7 @@
 </div>
 </section>
 
-
+<section class="shadow"></section>
 
 
 <section class="jarallax" id="parallax-A"> 
@@ -172,15 +172,15 @@ KONTAKT START
 
 <br>Pondelok až Piatok: 8,00 – 17,00
 <br>
-
+<div class='bigger'>
 <br><a href="tel:+421 907 479 326">+421 907 479 326</a>
 <br><a href="tel:+421 55 30 84208">+421 55 30 84208</a>
 <br>
 <br><a href="mailto:patrium@patrium.sk">patrium@patrium.sk</a>
 <br><a href="mailto:patrium.sro@gmail.com">patrium.sro@gmail.com</a>
-
+</div>
 <div class="fakturacne">
-<br>Fakturačné údaje:
+<br><strong>Fakturačné údaje:</strong>
 <br>PATRIUM s.r.o.
 <br>Petzvalova 20/33,
 <br>040 11 Košice
@@ -188,7 +188,9 @@ KONTAKT START
 <br>DIČ: 2023843162
 <br>Bankové spojenie: Slovenská sporiteľna a.s.
 <br>IBAN : SK8709000000005048918083
-<br>zápis v Obchodnom registri Okresného súdu Košice I., oddiel Sro, <br>vložka 33183/V
+<br>
+<br>zápis v Obchodnom registri Okresného súdu Košice I., 
+<br>oddiel Sro, vložka 33183/V
 </div>
 
 	</div>
@@ -214,9 +216,9 @@ KONTAKT START
 
 <select placeholder="Subject line" name="subject" id="subject" required>
         <option disabled hidden selected>Vyberte možnosť</option>
-        <option>Zateplenie bytového domu</option>
-        <option>Rekonštrukcia</option>
-        <option>Výstavba</option>
+        <option>Projekčná činnosť</option>
+        <option>Inžinierska činnosť</option>
+        <option>Stavebný dozor</option>
         <option>Iné</option>
 </select>
 
@@ -279,27 +281,27 @@ function validateContact() {
 	
 	if(!$("#userName").val()) {
 		$("#userName-info").html("(povinné)");
-		$("#userName").css('background-color','#FFFFDF');
+		$("#userName").css('background-color','#ffcccc');
 		valid = false;
 	}
 	if(!$("#userEmail").val()) {
 		$("#userEmail-info").html("(povinné)");
-		$("#userEmail").css('background-color','#FFFFDF');
+		$("#userEmail").css('background-color','#ffcccc');
 		valid = false;
 	}
 	if(!$("#userEmail").val().match(/^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/)) {
 		$("#userEmail-info").html("(neplatné)");
-		$("#userEmail").css('background-color','#FFFFDF');
+		$("#userEmail").css('background-color','#ffcccc');
 		valid = false;
 	}
 	if(!$("#subject").val()) {
 		$("#subject-info").html("(povinné)");
-		$("#subject").css('background-color','#FFFFDF');
+		$("#subject").css('background-color','#ffcccc');
 		valid = false;
 	}
 	if(!$("#content").val()) {
 		$("#content-info").html("(povinné)");
-		$("#content").css('background-color','#FFFFDF');
+		$("#content").css('background-color','#ffcccc');
 		valid = false;
 	}
 	
