--- a/v1/v1.html
+++ b/v1/v1.html
@@ -20,9 +20,38 @@
 </head>
 <body>
 
-<nav></nav>
 
 <div id='line'></div>
+
+
+<nav>
+
+<div class="menu">
+
+  <span class="menu__btn"></span>
+
+  <br>
+  <ul class="menu__list menu__list--unvisible">
+    <li class="menu__item">
+      <a href="#1" class="menu__link">Služby</a>
+    </li>
+    <li class="menu__item">
+      <a href="#2" class="menu__link">Kontakt</a>
+    </li>
+    
+   </ul>
+
+  </div>
+
+
+</nav>
+
+
+
+	
+
+
+
 
 <header>
 <div class="logo"></div>
@@ -170,7 +199,8 @@ KONTAKT START
 <br>040 11 Košice
 <br>
 
-<br>Pondelok až Piatok: 8,00 – 17,00
+<br>Pondelok až Piatok: 
+<br>8:00 – 17:00
 <br>
 <div class='bigger'>
 <br><a href="tel:+421 907 479 326">+421 907 479 326</a>
