--- a/v1/v1.html
+++ b/v1/v1.html
@@ -33,10 +33,10 @@
   <br>
   <ul class="menu__list menu__list--unvisible">
     <li class="menu__item">
-      <a href="#1" class="menu__link">Služby</a>
+      <a href="#sluzby" class="menu__link">Služby</a>
     </li>
     <li class="menu__item">
-      <a href="#2" class="menu__link">Kontakt</a>
+      <a href="#kontakt" class="menu__link">Kontakt</a>
     </li>
     
    </ul>
@@ -81,7 +81,7 @@
 </section>
 
 
-	
+<div id="sluzby"></div>	
 <section class="text">
 
 <div class="flex-row"> 
@@ -182,7 +182,7 @@ KONTAKT START
 -->
 
 
-<div id="4"></div>
+<div id="kontakt"></div>
 <!--
 ---------------------------------
 	CONTACT 	 
