--- a/v1/index.html
+++ b/v1/index.html
@@ -294,8 +294,8 @@ function sendContact() {
 		$("#subject").val("");  
 		$("#content").val("");  
  		//window.location.href = "#sent";
-        var mapPositon = $("#cd-google-map").offset().top;
-        window.scroll(0, mapPositon-350);
+        var kontaktPositon = $("#kontakt").offset().top;
+        window.scroll(0, kontaktPositon);
         
 		},
 		error:function (){}
