--- a/v1/index.html
+++ b/v1/index.html
@@ -54,7 +54,10 @@
 
 
 <header>
-<div class="logo"></div>
+<div class="img-container">
+<img src="media/logo.png">
+</div>
+
 </header>
 
 <section class="text">
